# data_compression_rs

./: Cargo.toml  README.md
src/: lib.rs
src/integer_codes/: bit_vector_iterator.rs  check.rs  compress.rs  decompress.rs  integer_codes.rs  mod.rs
src/introduction/: bit_vector.rs  mod.rs  packed_records.rs  random_bits.rs  sort_bench.rs  util.rs
