[package]
name = "dc_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }

[profile.dev]
opt-level = 3
lto = true
incremental = true

[profile.release]
opt-level = 3
panic = "abort"
lto = true
incremental = true
