[package]
name = "dc_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
num-traits = "0.2.16"
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }

[profile.dev]
opt-level = 3
lto = true
incremental = true

[profile.release]
opt-level = 3
panic = "abort"
lto = true
incremental = true
